get space back from lists on small screens fix link hover overflow issue in tables

--- a/resources/elements.css
+++ b/resources/elements.css
@@ -77,3 +77,9 @@ button {
   padding: 0.3rem 0.5rem;
   border: 2px solid var(--subtle-text);
 }
+
+@media only screen and (max-width: 500px) {
+  ul {
+    padding-left: 0;
+  }
+}
